<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dp30"
    android:paddingBottom="@dimen/dp30">

    <com.android.almufeed.ui.camera.CircleImageView
        android:id="@+id/icon"
        android:layout_width="108dp"
        android:layout_height="108dp"
        android:layout_marginTop="@dimen/dp64"
        android:src="@drawable/ic_camera"
        app:civ_border_color="@color/transparent"
        app:civ_border_overlay="true"
        app:civ_border_width="@dimen/dp4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_title"
        style="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp30"
        android:layout_marginTop="@dimen/dp24"
        android:layout_marginBottom="@dimen/dp24"
        android:gravity="center"
        android:text="@string/text_select_image"
        android:textColor="@color/dark_gray"
        android:textSize="@dimen/sp14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icon" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_content"
        style="@style/TextAppearance.MaterialComponents.Caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp30"
        android:layout_marginTop="@dimen/dp24"
        android:layout_marginBottom="@dimen/dp24"
        android:gravity="center"
        android:text="@string/text_select_image_description"
        android:textColor="@color/dark_gray"
        android:textSize="@dimen/sp14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_title" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/checkboxDoNotShowAgain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp30"
        android:text="@string/text_do_not_show_again"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_content" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_camera"
        style="@style/Widget.book.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp16"
        android:layout_marginTop="@dimen/dp24"
        android:text="@string/camera"
        app:layout_constraintEnd_toStartOf="@id/btn_gallery"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkboxDoNotShowAgain"
        app:textAllCaps="true" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_gallery"
        style="@style/Widget.book.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp16"
        android:layout_marginTop="@dimen/dp24"
        android:text="@string/gallery"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_camera"
        app:layout_constraintTop_toBottomOf="@+id/checkboxDoNotShowAgain"
        app:textAllCaps="true" />

</androidx.constraintlayout.widget.ConstraintLayout>