<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:background="#ffffff"
    android:orientation="vertical"
    app:cardCornerRadius="10dp">

    <LinearLayout
        android:id="@+id/llFavContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="11">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imgFavBookImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:background="@color/light_gray"
            android:scaleType="fitCenter"
            android:src="@drawable/default_book_cover" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txtFavBookTitle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.7"
            android:text="@string/sample_book_name"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/dp16"
            style="@style/TextAppearance.MaterialComponents.Subtitle1" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txtFavBookAuthor"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.6"
            android:text="@string/sample_author"
            android:textAlignment="center"
            android:textSize="@dimen/sp14"
            style="@style/TextAppearance.MaterialComponents.Body1"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txtDescBookPubliser"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.6"
            android:layout_below="@id/txtDescBookAuthor"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="@dimen/sp14"
            style="@style/TextAppearance.MaterialComponents.Body1"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txtDescBookPublishDate"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.6"
            android:textAlignment="center"
            android:layout_below="@id/txtDescBookPubliser"
            android:text="@string/menu_description"
            android:textColor="@color/black"
            android:textSize="@dimen/sp14"
            style="@style/TextAppearance.MaterialComponents.Body1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp4"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/dp5"
            android:backgroundTint="#0EBF55"
            android:drawableRight="@drawable/ic_listing_item_rating"
            android:drawablePadding="@dimen/dp8"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:singleLine="true"
            android:text="3.8"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/sp10"
            android:visibility="visible"
            app:cornerRadius="@dimen/dp16" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:background="#f5f5f5" />

    </LinearLayout>

</androidx.cardview.widget.CardView>