<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".ui.personalInfo.PersonalInfoActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        app:elevation="0dp"
        android:theme="@style/Theme.BookShelf.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            app:popupTheme="@style/Theme.BookShelf.PopupOverlay"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:contentInsetStartWithNavigation="0dp"
            app:titleTextColor="@color/white"
            android:background="@color/primary" />

    </com.google.android.material.appbar.AppBarLayout>


    <com.google.android.material.card.MaterialCardView
        style="@style/Widget.book.CardView.Background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="134dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipChildren="false"
            android:layout_marginTop="54dp">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_top"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent=".12" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_first_name"
                style="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp14"
                android:text="@string/first_name"
                app:layout_constraintTop_toBottomOf="@id/guideline_top" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ed_first_name"
                style="@style/Widget.book.TextInputLayoutOutlinedWhiteBg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp14"
                android:layout_marginEnd="@dimen/dp14"
                app:hintEnabled="false"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_first_name">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_first_name"
                style="@style/Widget.book.CardView.elevation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp2"
                app:cardCornerRadius="@dimen/dp36">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.book.TextInputLayoutOutlinedWhiteBg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:startIconDrawable="@drawable/icon_profile"
                    app:endIconMode="custom"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/nameInput"
                        style="@style/Widget.book.TextInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:hint="@string/first_name"
                        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ ."
                        android:imeOptions="actionNext"
                        android:inputType="textPersonName|textCapWords"
                        android:maxLines="1"
                        android:maxLength="120"
                        android:lines="1"
                        android:singleLine="true"
                        android:elevation="0dp"
                        android:nextFocusDown="@id/nameInputLast" />

                </com.google.android.material.textfield.TextInputLayout>
            </com.google.android.material.card.MaterialCardView>
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_last_name"
                style="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp14"
                android:layout_marginTop="@dimen/dp16"
                android:text="@string/last_name"
                app:layout_constraintTop_toBottomOf="@id/ed_first_name" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ed_last_name"
                style="@style/Widget.book.TextInputLayoutOutlinedWhiteBg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp14"
                android:layout_marginEnd="@dimen/dp14"
                app:hintEnabled="false"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_last_name">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_last_name"
                style="@style/Widget.book.CardView.elevation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp2"
                app:cardCornerRadius="@dimen/dp36">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.book.TextInputLayoutOutlinedWhiteBg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:startIconDrawable="@drawable/icon_profile"
                    app:endIconMode="custom"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/nameInputLast"
                        style="@style/Widget.book.TextInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:hint="@string/last_name"
                        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ ."
                        android:imeOptions="actionNext"
                        android:inputType="textPersonName|textCapWords"
                        android:maxLines="1"
                        android:lines="1"
                        android:maxLength="120"
                        android:singleLine="true"
                        android:elevation="0dp"
                        android:nextFocusDown="@id/emailInput" />

                </com.google.android.material.textfield.TextInputLayout>
            </com.google.android.material.card.MaterialCardView>
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_email"
                style="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp14"
                android:layout_marginTop="@dimen/dp16"
                android:text="@string/email_address"
                app:layout_constraintTop_toBottomOf="@id/ed_last_name" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ed_email"
                style="@style/Widget.book.TextInputLayoutOutlinedWhiteBg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp14"
                android:layout_marginEnd="@dimen/dp14"
                app:hintEnabled="false"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_email">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_email"
                style="@style/Widget.book.CardView.elevation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp2"
                app:cardCornerRadius="@dimen/dp36">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.book.TextInputLayoutOutlinedWhiteBg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:startIconDrawable="@drawable/ic_outline_email"
                    app:endIconMode="custom"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/emailInput"
                        style="@style/Widget.book.TextInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:background="@color/white"
                        android:imeOptions="actionDone"
                        android:maxLines="1"
                        android:lines="1"
                        android:maxLength="120"
                        android:singleLine="true"
                        android:elevation="0dp"
                        android:inputType="textEmailAddress" />

                </com.google.android.material.textfield.TextInputLayout>
            </com.google.android.material.card.MaterialCardView>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_next"
                style="@style/Widget.book.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="@dimen/dp30"
                android:text="@string/text_next"
                app:layout_constraintTop_toBottomOf="@id/ed_email"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:textAllCaps="true" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="90dp"
        android:elevation="@dimen/dp4">

        <com.android.almufeed.ui.camera.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="108dp"
            android:layout_height="108dp"
            android:src="@drawable/ic_profile_circle"
            app:civ_border_color="@color/circleImageBorder"
            app:civ_border_overlay="true"
            app:civ_border_width="@dimen/dp4" />

        <com.android.almufeed.ui.camera.CircleImageView
            android:id="@+id/image_button_pick_image"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="bottom|end"
            android:src="@drawable/ic_camera"
            app:civ_border_color="#cfd2e3"
            app:civ_border_overlay="true"
            app:civ_border_width="@dimen/dp1"
            app:layout_constraintBottom_toBottomOf="@id/profile_image"
            app:layout_constraintEnd_toEndOf="@id/profile_image" />

    </FrameLayout>

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:elevation="@dimen/dp4"
        android:indeterminate="true"
        android:max="100" />

</FrameLayout>